--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,19 @@
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.12.0",
     "firebase": "^7.14.2",
+    "immer": "^6.0.3",
     "material-ui": "^0.20.2",
+    "multer": "^1.4.2",
     "new-component": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-file-drop": "^3.0.6",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-with-firebase-auth": "^1.3.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.0"
   },
   "scripts": {
