--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "assert": "^2.0.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
     "firebase-admin": "^8.11.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.15",
-    "mongodb": "^3.5.6",
+    "mongodb": "^3.5.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "new-component": "^1.0.1",
     "node": "^14.0.0",
     "node-fetch": "^2.6.0",
