--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.1",
     "react-with-firebase-auth": "^1.3.2",
     "redux": "^4.0.5",
+    "socketio": "^1.0.0",
     "styled-components": "^5.1.0"
   },
   "scripts": {
