--- a/client/package.json
+++ b/client/package.json
@@ -18,14 +18,17 @@
     "new-component": "^1.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-emoji": "^0.5.0",
     "react-file-drop": "^3.0.6",
     "react-redux": "^7.2.0",
     "react-redux-firebase": "^3.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll-to-bottom": "^1.3.2",
     "react-slideshow-image": "^1.4.2",
     "react-with-firebase-auth": "^1.3.2",
     "redux": "^4.0.5",
+    "scroll-to-bottom": "^1.0.1",
     "socketio": "^1.0.0",
     "styled-components": "^5.1.0"
   },
