--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^3.5.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "new-component": "^1.0.1",
     "node": "^14.0.0",
     "node-fetch": "^2.6.0",
@@ -33,8 +34,5 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
   }
 }
